@@ -3,6 +3,7 @@
   (thanks to Jean-Baptiste Rouquier for suggestion).
 * Support the 'learn ahead' feature
   (thanks to Jean-Baptiste Rouquier for suggestion).
+* Add library support for extracting sounds from cards.
 
 20100322 mnemogogo-1.1.3
 * Add logging support to phone library.
